Fixed CSS overflow problem

--- a/frontend/src/app/rss-reader/user-feed-item/user-feed-item.component.css
+++ b/frontend/src/app/rss-reader/user-feed-item/user-feed-item.component.css
@@ -12,5 +12,5 @@
 }
 
 .pub-time {
-  width: 210px;
+  width: 215px;
 }
